integrate lombok